--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react-bootstrap": "^0.32.1",
     "react-chartjs-2": "^2.0.5",
     "react-dom": "^15.6.2",
+    "react-recaptcha": "^2.3.10",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-tap-event-plugin": "^3.0.3",
